# NFA-Gambit

./: .gitignore  CMakeLists.txt  PROJECT.md  README.md
src/: main.cpp
src/engine/: Board.cpp  Board.hpp  Move.hpp  Piece.cpp  Piece.hpp  Types.hpp
src/gui/: Assets.cpp  Assets.hpp  Window.cpp  Window.hpp
